Завершён метод isTaskRunInDocker(), появилась необходимость написать сборщик мусора, который будет удалять папки и архивы, на которые задачи из БД не ссылются. А также необходимо написать алгоритм крогового смещения задач